// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`visibility renders 0 1`] = `
Array [
  .c0 {
  visibility: 0;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: 0;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: 0;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`visibility renders function 1`] = `
Array [
  .c0 {
  visibility: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: has;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: has;
}

<div
    className="c0"
  />,
]
`;

exports[`visibility renders invalid theme path 1`] = `
Array [
  .c0 {
  visibility: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`visibility renders negative number 1`] = `
Array [
  .c0 {
  visibility: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`visibility renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  visibility: July;
}

@media screen and (min-width:November) {
  .c0 {
    visibility: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    visibility: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  visibility: July;
}

@media screen and (min-width:November) {
  .c0 {
    visibility: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    visibility: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  visibility: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    visibility: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    visibility: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  visibility: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    visibility: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    visibility: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`visibility renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    visibility: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    visibility: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    visibility: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    visibility: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    visibility: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    visibility: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    visibility: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    visibility: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    visibility: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`visibility renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  visibility: July;
}

@media May {
  .c0 {
    visibility: August;
  }
}

@media April {
  .c0 {
    visibility: September;
  }
}

@media January {
  .c0 {
    visibility: November;
  }
}

@media April {
  .c0 {
    visibility: August;
  }
}

@media June {
  .c0 {
    visibility: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  visibility: July;
}

@media May {
  .c0 {
    visibility: August;
  }
}

@media April {
  .c0 {
    visibility: September;
  }
}

@media January {
  .c0 {
    visibility: November;
  }
}

@media April {
  .c0 {
    visibility: August;
  }
}

@media June {
  .c0 {
    visibility: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  visibility: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    visibility: November;
  }
}

@media April {
  .c0 {
    visibility: January;
  }
}

@media January {
  .c0 {
    visibility: December;
  }
}

@media April {
  .c0 {
    visibility: April;
  }
}

@media June {
  .c0 {
    visibility: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  visibility: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    visibility: November;
  }
}

@media April {
  .c0 {
    visibility: January;
  }
}

@media January {
  .c0 {
    visibility: December;
  }
}

@media April {
  .c0 {
    visibility: April;
  }
}

@media June {
  .c0 {
    visibility: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`visibility renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    visibility: July;
  }
}

@media April {
  .c0 {
    visibility: August;
  }
}

@media January {
  .c0 {
    visibility: September;
  }
}

@media April {
  .c0 {
    visibility: November;
  }
}

@media June {
  .c0 {
    visibility: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    visibility: July;
  }
}

@media April {
  .c0 {
    visibility: August;
  }
}

@media January {
  .c0 {
    visibility: September;
  }
}

@media April {
  .c0 {
    visibility: November;
  }
}

@media June {
  .c0 {
    visibility: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    visibility: January;
  }
}

@media April {
  .c0 {
    visibility: December;
  }
}

@media January {
  .c0 {
    visibility: April;
  }
}

@media April {
  .c0 {
    visibility: May;
  }
}

@media June {
  .c0 {
    visibility: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    visibility: January;
  }
}

@media April {
  .c0 {
    visibility: December;
  }
}

@media January {
  .c0 {
    visibility: April;
  }
}

@media April {
  .c0 {
    visibility: May;
  }
}

@media June {
  .c0 {
    visibility: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`visibility renders postitive number 1`] = `
Array [
  .c0 {
  visibility: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`visibility renders string 1`] = `
Array [
  .c0 {
  visibility: July;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: July;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: June;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: June;
}

<div
    className="c0"
  />,
]
`;

exports[`visibility renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`visibility renders valid theme path 1`] = `
Array [
  .c0 {
  visibility: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  visibility: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
